#34 Provide the Microprofile Config Source reader.
- Provide the Microprofile Config Source reader.